lamp_app/ingress_controller.yaml
apiVersion: networking.k8s.io/v1 # ingress para redireccionar el trafico en el puerto 80 hacia react o django respectivamente
kind: Ingress
metadata:
  name: ingress-service
  labels: 
    name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: "/phpmyadmin" # si /admin redirecciona el trafico hacia el backend de phpmyadmin
            pathType: Prefix
            backend:
              service: 
                name: phpmyadmin-service
                port: 
                  number: 8080
          - path: "/" # si / o vacio redirecciona el trafico hacia el frontend
            pathType: Prefix
            backend:
              service: 
                name: lamp-service
                port: 
                  number: 8081
          - path: "/api" # Redirecciona a la api
            pathType: Prefix
            backend:
              service: 
                name: lamp-service
                port: 
                  number: 8081
